2014-05-27  Vanessa Gil <vanessa.gil@artica.es>

	* operation/snmpconsole/snmp_view.php: Changed ACLs. All 
	users can view traps whose source isn't in console.

2014-05-27  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager.php,
	operation/agentes/estado_monitores.php, general/main_menu.php: fixed
	the PHP warnings.

2014-05-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: added the generate networkmap
	from the ip mask.

2014-05-26  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/configurar_agente.php: Comment module
	in configuration file when this module is disabled.

2014-05-25  Junichi Satoh  <junichi@rworks.jp>

	* godmode/modules/manage_network_components.php,
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_common.php,
	pandoradb.sql, pandoradb.oracle.sql, pandoradb.postgreSQL.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Improved
	'FF threshold' to be able to define each state changing for
	network components.

2014-05-25  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_edit_modules.php: Improved to support
	each state changing of 'FF threshold'.

2014-05-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php,
	include/functions_networkmap.php: added the filters for the
	CIDR network masks.

2014-05-23  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/module_manager.php: Added optional
	module pagination.

2014-05-23  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_forecast.php: Fixed division by zero.

	* operation/visual_console/public_console.php: Fixed link
	to public visual console.

2014-05-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fix end of unknown
	periods in graphs when activate events storm protection