@@ -171,7 +171,7 @@ $data = array();
 $data[0] = __('Auth user');
 $data[1] = html_print_input_text ('snmp3_auth_user', $snmp3_auth_user, '', 15, 60, true);
 $data[2] = __('Auth password') . ui_print_help_tip(__("The pass length must be eight character minimum."), true);
-$data[3] = html_print_input_text ('snmp3_auth_pass', $snmp3_auth_pass, '', 15, 60, true);
+$data[3] = html_print_input_password ('snmp3_auth_pass', $snmp3_auth_pass, '', 15, 60, true);
 $data[3] .= html_print_input_hidden('active_snmp_v3', 0, true);
 if ($snmp_version != 3) $table_simple->rowstyle['field_snmpv3_row1'] = 'display: none;';
 push_table_simple($data, 'field_snmpv3_row1');
@@ -180,7 +180,7 @@ $data = array();
 $data[0] = __('Privacy method');
 $data[1] = html_print_select(array('DES' => __('DES'), 'AES' => __('AES')), 'snmp3_privacy_method', $snmp3_privacy_method, '', '', '', true);
 $data[2] = __('Privacy pass') . ui_print_help_tip(__("The pass length must be eight character minimum."), true);
-$data[3] = html_print_input_text ('snmp3_privacy_pass', $snmp3_privacy_pass, '', 15, 60, true);
+$data[3] = html_print_input_password ('snmp3_privacy_pass', $snmp3_privacy_pass, '', 15, 60, true);
 if ($snmp_version != 3) $table_simple->rowstyle['field_snmpv3_row2'] = 'display: none;';
 push_table_simple($data, 'field_snmpv3_row2');
 
