@@ -1,3 +1,8 @@
+2014-05-27  Ramon Novoa  <rnovoa@artica.es>
+
+	* godmode/agentes/module_manager_editor_network.php,
+	  include/functions_snmp_browser.php: Hide SNMP v3 passwords.
+
 2014-05-27  Vanessa Gil <vanessa.gil@artica.es>
 
 	* operation/snmpconsole/snmp_view.php: Changed ACLs. All 
